[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "CRISPResso2"
version = "2.3.3"
dependencies = [
    "pandas",
    "matplotlib",
    "seaborn",
    "jinja2",
    "scipy",
    "numpy"
]
description = "Software pipeline for the analysis of genome editing outcomes from deep sequencing data"
authors = [
    { name = "Edilytics, Inc.", email = "support@edilytics.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Cython",
]

[project.optional-dependencies]
dev = ["cython"]

[project.scripts]
CRISPResso = "CRISPResso2.CRISPRessoCORE:main"
CRISPRessoBatch = "CRISPResso2.CRISPRessoBatchCORE:main"
CRISPRessoPooled = "CRISPResso2.CRISPRessoPooledCORE:main"
CRISPRessoWGS = "CRISPResso2.CRISPRessoWGSCORE:main"
CRISPRessoCompare = "CRISPResso2.CRISPRessoCompareCORE:main"
CRISPRessoPooledWGSCompare = "CRISPResso2.CRISPRessoPooledWGSCompareCORE:main"
CRISPRessoAggregate = "CRISPResso2.CRISPRessoAggregateCORE:main"

[project.urls]
Homepage = "https://github.com/pinellolab/CRISPResso2"

[tool.setuptools]
package-dir = {"" = "CRISPResso2"}
packages = ["CRISPResso2", "CRISPResso2.CRISPRessoReports"]
include-package-data = true

[tool.ruff]
cache-dir = "/tmp/.ruff_cache"
line-length = 150
exclude = [
    "tests",
    "tests/",
    "**/tests/**",
]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle warnings
    "N",  # pep8-naming
    "D",  # pydocstyle (docstring conventions)
    "PL", # pylint rules
    "B",  # flake8-bugbear (common bugs and design problems)
    "A",  # flake8-builtins
    "RUF",# ruff-specific rules
]
preview = true
ignore = [
    "D100",  # Requires a docstring in public modules
    "D101",  # Requires a docstring in public classes
    "D104",  # Requires a docstring in public packages
    "D105",  # Requires a docstring in magic methods and functions
    "D203",  # Requires a blank line between the function/method signature and the docstring
    "D204",  # Requires a blank line after the docstring
    "D205",  # Requires a blank line after the docstring in multi-line docstrings
    "D213",  # Requires a multi-line docstring to start at the second line
    "D400",  # Requires periods in docstrings
    "D401",  # Requires specific verbage in docstrings
    "D404",  # Requires first word in docstring to not be "This"
    "D415",  # Requires punctuation at the end of docstrings
    "D417",  # Requires argument descriptions in docstrings
    "E115",  # Expected an indented block (comment)
    "E402",  # Module level import not at top of file - intentional for conditional imports
    "N812",  # Lowercase imported as non-lowercase - intentional for API consistency (e.g., `from CRISPRessoPro import plot as CRISPRessoPlot`)
    "N818",  # Exception name should be named with an Error suffix - existing codebase uses Exception suffix consistently
    "N999",  # Invalid module name - CRISPResso2 uses established CamelCase module naming convention
    "PLC0415",  # Import not at top-level - intentional for conditional imports, lazy loading, and avoiding circular imports
    "N802",  # Requires function names to be all lowercase
    "N806",  # Requires variables to be all lowercase
    "N803",  # Requires passed variables to be all lowercase
    "PLC0206",  # dict-index-missing-items - iteration pattern is intentional for modifying dict during iteration
    "PLR0911",  # too-many-return-statements - refactoring would reduce readability
    "PLR6301",  # no-self-use - methods are part of class interfaces (e.g., JSON decoder)
    "PLW1509",  # subprocess-popen-preexec-fn - intentional for signal handling
    # These should be fixed but will require a larger refactor
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-arguments
    "PLR0914",  # too-many-locals
    "PLR0915",  # too-many-statements
    "PLR0917",  # too-many-positional-arguments
    "PLR1702",  # too-many-nested-blocks
    "PLR2004",  # magic-value-comparison
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
# Embedded awk scripts have long lines that cannot be easily broken
"CRISPResso2/CRISPRessoPooledCORE.py" = ["E501"]
# setup.py requires conditional imports for Cython detection
"setup.py" = ["E402"]
